Simple heirarchy for Decoder types with DlDecoder at top, retrieves arch and endian type from LIEF

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -145,6 +145,7 @@ add_subdirectory(passes)
 add_library(disasm_main STATIC
   disasm_main.cpp
   DlDecoder.cpp
+  X86Decoder.cpp
   ExceptionDecoder.cpp
   GtirbModuleDisassembler.cpp
   GtirbZeroBuilder.cpp
